--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
+[v-cloak] {
+    display: none;
+}
+
 /* Reset */
 * {
     margin: 0;
