--- a/stylesheet.css
+++ b/stylesheet.css
@@ -229,6 +229,24 @@ section h2 {
     flex: 1;
 }
 
+.media-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-bottom: 2rem;
+}
+
+.media-item > div {
+    flex: 1;
+}
+
+.media-item img {
+    max-width: 300px;
+    height: 100px;
+    border: 1px solid #eee;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .header-container {
